extensions/VisualEditor/wikia/modules/ve/ui/styles/ve.ui.WikiaTransclusionDialog.scss
.ve-ui-mwTemplateDialog {
	.ve-ui-mwParameterPage-infoButton,
	.ve-ui-mwParameterPage-removeButton,
	.ve-ui-mwParameterPage-addButton,
	.ve-ui-mwTransclusionDialog-modeButton,
	.ve-ui-mwTemplatePage-description {
		display: none;
	}

	.ve-ui-mwParameterPage {
		&.oo-ui-pageLayout:last-of-type {
			margin-bottom: 0;
		}
	}

	.ve-ui-mwParameterPage-info {
		padding-left: 0.5em;
	}

	.ve-ui-mwParameterPage-actions {
		padding-right: 0.5em;
	}

	.ve-ui-mwParameterPage-field {
		padding: 0.75em 0.5em;
	}

	.ve-ui-wikiaTemplateGetInfoWidget-templateInfoButton {
		.oo-ui-iconedElement-icon {
			float: right;
			height: 18px;
			margin-left: 5px;
			width: 18px;
		}

		.oo-ui-labeledElement-label {
			line-height: 18px;
		}
	}

	.oo-ui-window-foot .ve-ui-wikiaTransclusionDialog-cancelButton {
		float: right;
	}

	.ve-ui-mwTemplateDialog-filter {
		background: $color-page;
		border-bottom: 1px solid $color-page-border;
		left: 0;
		padding: 1.5em 2em;
		position: absolute;
		right: 0;

		.oo-ui-textInputWidget {
			width: 100%;
		}
	}
}

.ve-ui-mwTemplateDialog-editFlow {
	&.ve-ui-mwTransclusionDialog-single {
		.oo-ui-gridLayout {
			margin-top: 5.6em;
		}
		.ve-ui-mwTemplatePage {
			/* TODO: Wikia (ve-sprint-25): This should not be added to the DOM in the first place */
			display: none;
		}
		.oo-ui-bookletLayout-stackLayout {
			box-sizing: border-box;
			padding-top: 1.5em;
		}
	}

	&.ve-ui-mwTransclusionDialog-multiple {
		.oo-ui-bookletLayout-stackLayout {
			/* TODO: Wikia (ve-sprint-25): Find where these css properties are being added to the element */
			bottom: 0 !important;
			height: auto !important;
			top: 5.6em !important;
		}
		.ve-ui-mwTemplateDialog-filter {
			left: 33%;
			margin-left: 1px;
		}
	}

	&.ve-ui-wikiaTransclusionDialog-zeroState {
		.oo-ui-gridLayout {
			margin-top: 0;
		}

		.ve-ui-wikiaTemplateGetInfoWidget-templateInfoButton {
			margin-top: 1em;

			.oo-ui-labeledElement-label {
				margin-left: 0;
			}
		}
	}
}

