VE-1543: Fix alignment of arrow icon

--- a/extensions/VisualEditor/wikia/modules/ve/ui/styles/ve.ui.WikiaTransclusionDialog.scss
+++ b/extensions/VisualEditor/wikia/modules/ve/ui/styles/ve.ui.WikiaTransclusionDialog.scss
@@ -26,11 +26,13 @@
 	}
 
 	.ve-ui-wikiaTemplateGetInfoWidget-templateInfoButton {
-		.oo-ui-iconedElement-icon {
-			float: right;
-			height: 18px;
-			margin-left: 5px;
-			width: 18px;
+		.oo-ui-buttonedElement-button {
+			.oo-ui-iconedElement-icon {
+				float: right;
+				height: 18px;
+				margin-left: 5px;
+				width: 18px;
+			}
 		}
 
 		.oo-ui-labeledElement-label {
